@@ -1,0 +1,1 @@
+y = a**2 + 2*a + 1
