@@ -1,0 +1,1 @@
+foo = lambda x: x**2 + 2*x + 1  # [unnecessary-lambda-assignment]
