@@ -1,0 +1,2 @@
+def foo(x):
+    return x**2 + 2*x + 1
