@@ -1,4 +1,0 @@
-import astroid
-
-tree = astroid.parse("a = lambda x: x**2")
-tree
