@@ -1,0 +1,3 @@
+unnecessary-direct-lambda-call:3:4:3:33::Lambda expression called directly. Execute the expression inline instead.:UNDEFINED
+unnecessary-direct-lambda-call:4:8:4:27::Lambda expression called directly. Execute the expression inline instead.:UNDEFINED
+unnecessary-direct-lambda-call:4:29:4:47::Lambda expression called directly. Execute the expression inline instead.:UNDEFINED
